Added a sample flask app

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,26 @@
+alembic
+bcrypt
+cffi
+click
+coverage
 Flask
+Flask-Bcrypt
+Flask-Migrate
+Flask-Script
+Flask-SQLAlchemy
+Flask-Testing
+ForgeryPy
+itsdangerous
+Jinja2
+Mako
+MarkupSafe
+nose
+psycopg2
+pycparser
+PyJWT
+python-dateutil
+python-editor
+six
+SQLAlchemy
+Werkzeug
+gunicorn
